crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__continue_outside_loop.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: cannot continue outside of loop
   ╭─[<test>:1:1]
   │
 1 │ continue
   │ ────┬───  
   │     ╰───── invalid when there are no loop scopes
───╯

